@@ -1,3 +1,8 @@
+2005-03-01  Damien Sandras  <dsandras@gnome.org>
+
+	* src/endpoint.cpp, src/endpoint.h: Make use of the Mask to remove
+	media formats that we do not want to use.
+
 2005-02-28  Damien Sandras  <dsandras@gnome.org>
 
 	* src/stunclient.cpp: Fixed messages thanks to a suggestion from
